--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-art-template": "^1.0.1",
     "express-session": "^1.15.6",
+    "jsrender": "^1.0.1",
     "mysql": "^2.16.0"
   }
 }
