--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-art-template": "^1.0.1",
     "express-session": "^1.15.6",
     "jsrender": "^1.0.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "nodemailer": "^5.1.1",
+    "nodemailer-smtp-transport": "^2.7.4"
   }
 }
