--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "md5-node": "^1.0.1",
     "mysql": "^2.16.0",
     "nodemailer": "^5.1.1",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "nodemailer-smtp-transport": "^2.7.4",
+    "vue-resource": "^1.5.1"
   }
 }
