--- a/public/letao/package.json
+++ b/public/letao/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --host 192.168.0.101 --port 5000 --contentBase src --hot"
+    "dev": "webpack-dev-server --open --host localhost --port 5000 --contentBase src --hot"
   },
   "keywords": [],
   "author": "",
