--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.16.0",
     "nodemailer": "^5.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
+    "oracledb": "^3.1.2",
     "vue-resource": "^1.5.1"
   }
 }
