--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "body-parser": "^1.18.3",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.3",
-    "ejsexcel": "^3.5.3",
     "express": "^4.16.4",
     "express-art-template": "^1.0.1",
     "express-session": "^1.15.6",
     "jsrender": "^1.0.1",
     "md5-node": "^1.0.1",
     "mysql": "^2.16.0",
+    "node-pinyin": "^0.2.3",
     "nodemailer": "^5.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "oracledb": "^3.1.2",
-    "vue-resource": "^1.5.1"
+    "pinyin": "^2.8.3",
+    "vue-resource": "^1.5.1",
+    "xlsx": "^0.14.3"
   }
 }
