--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "md5-node": "^1.0.1",
     "mysql": "^2.16.0",
     "node-pinyin": "^0.2.3",
+    "node-uuid": "^1.4.8",
     "nodemailer": "^5.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "oracledb": "^3.1.2",
