--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.3",
+    "echarts": "^4.2.1",
     "ejsexcel": "^3.5.5",
     "express": "^4.16.4",
     "express-art-template": "^1.0.1",
@@ -22,6 +23,7 @@
     "md5-node": "^1.0.1",
     "mysql": "^2.16.0",
     "node-pinyin": "^0.2.3",
+    "node-schedule": "^1.3.2",
     "node-uuid": "^1.4.8",
     "nodemailer": "^5.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
